// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`listReducer add element to list 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "list2",
    "description": "",
    "list": Array [
      Object {
        "book": Object {
          "description": "lorem ipsum...",
          "pid": "pid1",
          "title": "title1",
        },
        "pid": "pid1",
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer add element to list twice - no duplicates allowed 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "description": "",
    "list": Array [
      Object {
        "book": Object {
          "description": "lorem ipsum...",
          "pid": "pid1",
          "title": "title1",
        },
        "description": "some-description-1",
        "pid": "pid1",
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
      Object {
        "_id": 2,
        "book": Object {
          "description": "lorem ipsum...",
          "pid": "pid2",
          "title": "title2",
        },
        "pid": "pid2",
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer add lists 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "description": "a description 1",
    "list": Array [],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
  Object {
    "_created": "1234",
    "_id": "some-id-2",
    "description": "a description 2",
    "list": Array [],
    "owner": null,
    "title": "some list 2",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer get lists by type 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "description": "",
    "list": Array [],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
  Object {
    "_created": "1234",
    "_id": "some-id-3",
    "description": "",
    "list": Array [],
    "owner": null,
    "title": "some list 3",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer get lists for owner 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "description": "",
    "list": Array [],
    "owner": "some-owner",
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
  Object {
    "_created": "1234",
    "_id": "some-id-3",
    "description": "",
    "list": Array [],
    "owner": "some-owner",
    "title": "some list 3",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer get lists for owner 2`] = `Array []`;

exports[`listReducer insert element at specific pos in list 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "description": "",
    "list": Array [
      Object {
        "_id": 1,
        "book": Object {
          "description": "lorem ipsum...",
          "pid": "pid1",
          "title": "title1",
        },
        "pid": "pid1",
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
      Object {
        "_id": 3,
        "book": Object {
          "pid": "pid3",
        },
      },
      Object {
        "_id": 2,
        "book": Object {
          "description": "lorem ipsum...",
          "pid": "pid2",
          "title": "title2",
        },
        "pid": "pid2",
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer remove element from list 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "deleted": Object {
      "123": true,
    },
    "description": "",
    "list": Array [
      Object {
        "_id": "456",
        "book": Object {
          "description": "lorem ipsum...",
          "pid": "pid2",
          "title": "title2",
        },
        "pid": "pid2",
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "owner": null,
    "pending": Array [
      Object {
        "_id": "123",
        "book": Object {
          "pid": "pid1",
        },
      },
    ],
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer remove list 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "deletingIsLoading": true,
    "description": "",
    "list": Array [],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
  Object {
    "_created": "1234",
    "_id": "some-id-2",
    "description": "",
    "list": Array [],
    "owner": null,
    "title": "some list 2",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer toggle element in list 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "description": "",
    "list": Array [
      Object {
        "book": Object {
          "description": "lorem ipsum...",
          "pid": "pid1",
          "title": "title1",
        },
        "pid": "pid1",
      },
    ],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer toggle element in list 2`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "description": "",
    "list": Array [],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;
